@@ -1,10 +1,17 @@
 package com.example.consultorioApp.service.impl;
 
+import com.example.consultorioApp.dto.request.odontologo.OdontologoEntradaDTO;
+import com.example.consultorioApp.dto.request.update.OdontologoActualizadoEntradaDTO;
+import com.example.consultorioApp.dto.response.odontologo.OdontologoSalidaDTO;
 import com.example.consultorioApp.exception.ResourceNotFoundException;
 import com.example.consultorioApp.model.Odontologo;
+import com.example.consultorioApp.model.Paciente;
 import com.example.consultorioApp.repository.IOdontologoRepository;
 import com.example.consultorioApp.service.IOdontologoService;
+import com.sun.jdi.PrimitiveValue;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.Banner;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -15,75 +22,76 @@ import java.util.stream.Collectors;
 public class OdontologoService implements IOdontologoService {
 
 
-    @Autowired
+
     private final IOdontologoRepository odontologoRepository;
+    private final ModelMapper modelMapper;
 
-
-    public OdontologoService(IOdontologoRepository odontologoRepository) {
+    @Autowired
+    public OdontologoService(IOdontologoRepository odontologoRepository, ModelMapper modelMapper) {
         this.odontologoRepository = odontologoRepository;
+        this.modelMapper = modelMapper;
     }
 
     @Override
-    public OdontologoDTO registrarOdontologo(OdontologoDTO odontologoDTO) {
-        Odontologo odontologo = convertirAEntidad(odontologoDTO);
-        Odontologo nuevoOdontologo = odontologoRepository.save(odontologo);
-        return convertirADTO(nuevoOdontologo);
-    }
-
-
-    @Override
-    public OdontologoDTO actualizarOdontologo(OdontologoDTO odontologoDTO) {
-        Odontologo odontologoExistente = odontologoRepository.findById(odontologoDTO.getId())
-                .orElseThrow(() -> new ResourceNotFoundException("Odontologo no encontrado"));
-        odontologoExistente.setNombre(odontologoDTO.getNombre());
-        odontologoExistente.setApellido(odontologoDTO.getApellido());
-        odontologoExistente.setMatricula(odontologoDTO.getMatricula());
-        odontologoRepository.save(odontologoExistente);
-        return convertirADTO(odontologoExistente);
-    }
-
-
-    @Override
-    public Optional<OdontologoDTO> buscarOdontologo(Long id) {
-        Optional<Odontologo> odontologo = Optional.ofNullable(odontologoRepository.findById(id).orElseThrow(()
-                -> new ResourceNotFoundException("Odontologo no encontrado")));
-        return odontologo.map(this::convertirADTO);
+    public OdontologoSalidaDTO registrarOdontologo(OdontologoEntradaDTO odontologo) {
+        Odontologo odontologoIngresado = dtoEntradaAEntidad(odontologo);
+        Odontologo odontologoRegistrado = odontologoRepository.save(odontologoIngresado);
+        return entidadAdtoSalida(odontologoRegistrado);
     }
 
     @Override
-    public List<OdontologoDTO> listarOdontologos() {
+    public OdontologoSalidaDTO actualizarOdontologo(OdontologoActualizadoEntradaDTO odontologo) {
+      // Busca odontologo y lanza una exepcion si no lo encuentra
+        Odontologo odontologoActualizar = odontologoRepository.findById(odontologo.getId())
+                .orElseThrow(() -> new ResourceNotFoundException("No se encontro el odontologo con id: " + odontologo.getId()));
+
+        // Actualiza y guarda el odontologo
+        Odontologo odontologoActualizado = dtoActualizadoAEntidad(odontologo);
+        odontologoRepository.save(odontologoActualizado);
+
+        // Convierte el odontologo actualizado a DTO y lo retorna
+        return entidadAdtoSalida(odontologoActualizado);
+    }
+
+    @Override
+    public OdontologoSalidaDTO buscarOdontologo(Long id) {
+        Odontologo odontologo = odontologoRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("No se encontro el odontologo con id: " + id));
+        return entidadAdtoSalida(odontologo);
+    }
+
+    @Override
+    public List<OdontologoSalidaDTO> listarOdontologos() {
         List<Odontologo> odontologos = odontologoRepository.findAll();
-        return odontologos.stream()
-                .map(this::convertirADTO)
-                .collect(Collectors.toList());
+        return odontologos.stream().map(this::entidadAdtoSalida).toList();
     }
 
     @Override
     public void eliminarOdontologo(Long id) {
-        odontologoRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Odontologo no encontrado"));
+        Optional<Odontologo> odontologo = odontologoRepository.findById(id);
+        if (odontologo.isEmpty()) {
+            throw new ResourceNotFoundException("No se encontro el odontologo con id: " + id);
+        }
         odontologoRepository.deleteById(id);
     }
 
 
-    // Método para convertir una entidad a DTO
-    private OdontologoDTO convertirADTO(Odontologo odontologo) {
-        OdontologoDTO odontologoDTO = new OdontologoDTO();
-        odontologoDTO.setId(odontologo.getId());
-        odontologoDTO.setNombre(odontologo.getNombre());
-        odontologoDTO.setApellido(odontologo.getApellido());
-        odontologoDTO.setMatricula(odontologo.getMatricula());
-        return odontologoDTO;
+    // Metodos privados
+    private OdontologoSalidaDTO entidadAdtoSalida(Odontologo odontologo) {
+        return modelMapper.map(odontologo, OdontologoSalidaDTO.class);
     }
 
-    // Método para convertir un DTO a una entidad
-    private Odontologo convertirAEntidad(OdontologoDTO odontologoDTO) {
-        Odontologo odontologo = new Odontologo();
-        // No asignamos el ID aquí si estamos creando una nueva entidad, solo en actualizaciones.
-        odontologo.setNombre(odontologoDTO.getNombre());
-        odontologo.setApellido(odontologoDTO.getApellido());
-        odontologo.setMatricula(odontologoDTO.getMatricula());
-        return odontologo;
+    public Odontologo dtoEntradaAEntidad(OdontologoEntradaDTO odontologo) {
+        return modelMapper.map(odontologo, Odontologo.class);
+    }
+
+    public Odontologo dtoActualizadoAEntidad(OdontologoActualizadoEntradaDTO odontologo) {
+        return modelMapper.map(odontologo, Odontologo.class);
+    }
+
+    // Método para convertir OdontologoSalidaDTO a entidad
+    public Odontologo convertirADTOAEntidad(OdontologoSalidaDTO odontologoDTO) {
+        return modelMapper.map(odontologoDTO, Odontologo.class);
     }
 
 }
